P5 E-Learning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/Completed_Module__c.field-meta.xml
<CustomField>
    <fullName>Completed_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Module</label>
    <type>Checkbox</type>
</CustomField>