P5 E-Learning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Progresses Trail Per Modules</relationshipLabel>
    <relationshipName>Progresses_Trail_Per_Modules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>