P5 E-Learning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Progresses Trail Per Modules</relationshipLabel>
    <relationshipName>Progresses_Trail_Per_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>