P5 E-Learning/force-app/main/default/objects/Progress_Trail_Per_Module__c/validationRules/Is_not_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_not_active</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Module__r.Active__c)</errorConditionFormula>
    <errorMessage>The module is not active</errorMessage>
</ValidationRule>