P5 E-Learning/force-app/main/default/objects/Progress_Trail_Per_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Score__c</columns>
    <columns>Progress_Module_Per_Unit__c</columns>
    <columns>Module__c</columns>
    <columns>Completed_Module__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>